--- a/main.bib
+++ b/main.bib
@@ -39,3 +39,20 @@
   publisher={Elsevier}
 }
 
+@article{Butchers:2018hds,
+      author         = "Butchers, Sean and Seery, David",
+      title          = "{Numerical evaluation of inflationary 3-point functions
+                        on curved field space—with the transport method \&
+                        CppTransport}",
+      journal        = "JCAP",
+      volume         = "1807",
+      year           = "2018",
+      number         = "07",
+      pages          = "031",
+      doi            = "10.1088/1475-7516/2018/07/031",
+      eprint         = "1803.10563",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1803.10563;%%"
+}
+
